# Hand_sign_language_decoder

./: main.py  pyproject.toml
utils/: hand_detection.py
